--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
-node_modules
-/tmp
+# Go
+tmp/
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
 ysgame
+
+# React/Node
+web/node_modules/
+web/dist/
+web/.vite/
+
+# Build output
+ui/dist/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
