--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -13,6 +13,9 @@ services:
     environment:
       MONGODB_URI: "mongodb://user:password@mongo:27017"
       MONGODB_DATABASE: "ysgame"
+      ADMIN_USERNAME: "admin"
+      ADMIN_PASSWORD: "admin123"
+      JWT_SECRET: "ysgame-secret-key"
     # 或使用 env 文件（二选一）：
     # env_file:
     #   - .env
